# PoderJudicialMCPServer

./: LICENSE  README.md  pyproject.toml  server.py
services/: __init__.py  search_service.py
